# Medical-Edge-Triage-System

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  run_api.py  run_ingest.py  run_ui.py
scripts/: download_data.py
src/: config.py  models.py  orchestrator.py  temporal.py
src/api/: app.py
src/ingestion/: embedder.py  loader.py  metadata_tagger.py  pipeline.py
src/reasoning/: counterfactual.py  inference.py  uncertainty.py
src/retrieval/: reranker.py  retriever.py
src/ui/: app.py
